# PrettyReader

./: .gitignore  CMakeLists.txt  README.md  RENDERING_BUGS.md  org.prettyreader.PrettyReader.desktop  test.md
docs/: 01-reconnaissance-report.md  02-project-planning-roadmap.md  03-calligra-extraction-analysis.md  04-markdown-to-qtextdocument-mapping.md  05-style-system-and-persistence.md  06-canvas-and-interaction-design.md  07-print-and-pdf-pipeline.md
docs/plans/: 2026-02-16-hershey-fonts-design.md  2026-02-16-hershey-fonts-implementation.md  2026-02-16-optimal-justify.md  2026-02-16-pdf-export-dialog-design.md  2026-02-16-pdf-export-dialog.md  2026-02-16-pdf-markdown-copy.md  2026-02-17-ttf-xobject-rendering-design.md  2026-02-17-ttf-xobject-rendering.md  2026-02-17-xobject-glyph-rendering-design.md  2026-02-17-xobject-glyph-rendering.md  2026-02-21-block-page-splitting-design.md  2026-02-21-block-page-splitting.md  2026-02-21-toc-scroll-sync-design.md  2026-02-21-toc-scroll-sync.md  2026-02-21-web-view-design.md  2026-02-21-web-view.md  2026-02-22-renderer-dedup-design.md  2026-02-22-renderer-dedup.md  2026-02-25-header-footer-designer-design.md  (+5 more)
src/: CMakeLists.txt
src/app/: main.cpp  mainwindow.cpp  mainwindow.h  metadatastore.cpp  metadatastore.h  prettyreader.kcfg  prettyreadersettings.kcfgc  prettyreaderui.rc  singleinstanceguard.cpp  singleinstanceguard.h
src/canvas/: documentview.cpp  documentview.h  pageitem.cpp  pageitem.h  pdfpageitem.cpp  pdfpageitem.h  qtboxrenderer.cpp  qtboxrenderer.h  rendercache.cpp  rendercache.h  webviewitem.cpp  webviewitem.h  webviewrenderer.cpp  webviewrenderer.h
src/export/: contentrtfexporter.cpp  contentrtfexporter.h  rtfexporter.cpp  rtfexporter.h  rtffilteroptions.h  rtfutils.h
src/font/: fontmanager.cpp  fontmanager.h  hersheyfont.cpp  hersheyfont.h  sfnt.cpp  sfnt.h  textshaper.cpp  textshaper.h
src/layout/: layoutengine.cpp  layoutengine.h  linebreaker.cpp  linebreaker.h
src/markdown/: codeblockhighlighter.cpp  codeblockhighlighter.h  codespancollector.h  documentbuilder.cpp  documentbuilder.h  footnoteparser.cpp  footnoteparser.h  markdownhighlighter.cpp  markdownhighlighter.h
src/model/: contentbuilder.cpp  contentbuilder.h  contentfilter.cpp  contentfilter.h  contentmodel.h  pagerangeparser.cpp  pagerangeparser.h  pdfexportoptions.h
src/pdf/: pdfboxrenderer.cpp  pdfboxrenderer.h  pdfgenerator.cpp  pdfgenerator.h  pdfwriter.cpp  pdfwriter.h
src/print/: headerfooterrenderer.cpp  headerfooterrenderer.h  printcontroller.cpp  printcontroller.h
src/render/: boxtreerenderer.cpp  boxtreerenderer.h
src/style/: characterstyle.cpp  characterstyle.h  colorpalette.cpp  colorpalette.h  fontdegradationmap.cpp  fontdegradationmap.h  fontfeatures.h  fontpairing.cpp  fontpairing.h  fontpairingmanager.cpp  fontpairingmanager.h  footnotestyle.cpp  footnotestyle.h  masterpage.h  pagelayout.cpp  pagelayout.h  pagetemplate.cpp  pagetemplate.h  pagetemplatemanager.cpp  pagetemplatemanager.h  palettemanager.cpp  palettemanager.h  paragraphstyle.cpp  paragraphstyle.h  resourcestore.h  stylemanager.cpp  stylemanager.h  styletreemodel.cpp  styletreemodel.h  tablestyle.cpp  tablestyle.h  themecomposer.cpp  themecomposer.h  thememanager.cpp  thememanager.h  typeset.cpp  typeset.h  typesetmanager.cpp  typesetmanager.h  typographytheme.cpp  (+3 more)
src/themes/: academic.json  default.json  hershey.json
src/themes/pairings/: dejavu-family.json  fira-family.json  georgia-inter-jetbrains.json  georgia-trebuchet-courier.json  hershey-serif-sans-roman.json  inverted-contrast.json  liberation-serif-sans-mono.json  libertine-biolinum-hack.json  noto-serif-sans-jetbrains.json  noto-serif-source-code.json  noto-source-family.json  sans-forward.json  serif-scholar.json  typewriter.json  ubuntu-family.json
src/themes/palettes/: academic-light.json  catppuccin-latte.json  catppuccin-mocha.json  default-light.json  dracula.json  everforest-dark.json  everforest-light.json  flexoki-dark.json  flexoki-light.json  github-light.json  gruvbox-dark.json  gruvbox-light.json  hershey-ink.json  nord.json  one-dark.json  one-light.json  rose-pine-dawn.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
src/themes/presets/: academic.json  default.json  hershey.json
src/themes/templates/: academic.json  default.json  minimal.json
src/themes/typesets/: academic.json  default.json  dejavu-family.json  fira-family.json  georgia-inter-jetbrains.json  georgia-trebuchet-courier.json  hershey.json  inverted-contrast.json  liberation-serif-sans-mono.json  libertine-biolinum-hack.json  noto-source-family.json  sans-forward.json  serif-scholar.json  typewriter.json  ubuntu-family.json
src/themes/typography/: academic.json  default.json  dejavu-family.json  fira-family.json  georgia-inter-jetbrains.json  georgia-trebuchet-courier.json  hershey.json  inverted-contrast.json  liberation-serif-sans-mono.json  libertine-biolinum-hack.json  noto-source-family.json  sans-forward.json  serif-scholar.json  typewriter.json  ubuntu-family.json
src/typography/: hyphenator.cpp  hyphenator.h  shortwords.cpp  shortwords.h
src/widgets/: colordockwidget.cpp  colordockwidget.h  colorselectorwidget.cpp  colorselectorwidget.h  documenttab.cpp  documenttab.h  droptargetlineedit.cpp  droptargetlineedit.h  filebrowserdock.cpp  filebrowserdock.h  fontpairingeditordialog.cpp  fontpairingeditordialog.h  fontpairingpickerwidget.cpp  fontpairingpickerwidget.h  footnoteconfigwidget.cpp  footnoteconfigwidget.h  headerfooterdialog.cpp  headerfooterdialog.h  itemselectorbar.cpp  itemselectorbar.h  languagepickerdialog.cpp  languagepickerdialog.h  pagedockwidget.cpp  pagedockwidget.h  pagelayoutwidget.cpp  pagelayoutwidget.h  pagetemplatepickerwidget.cpp  pagetemplatepickerwidget.h  paletteeditordialog.cpp  paletteeditordialog.h  palettepickerwidget.cpp  palettepickerwidget.h  pdfexportdialog.cpp  pdfexportdialog.h  preferencesdialog.cpp  preferencesdialog.h  resourcepickerwidget.cpp  resourcepickerwidget.h  rtfcopyoptionsdialog.cpp  rtfcopyoptionsdialog.h  (+24 more)
